# kolena

./: .circleci.yml  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  LICENSE_HEADER  README.md  codecov.yml  index.html  libcairo.2.dylib.  mkdocs.insiders.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
examples/activation_map/: pyproject.toml
examples/activation_map/activation_map/: evaluator.py  seed.py  seed_bitmap_mask.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/age_estimation/: README.md  evaluator.py  pyproject.toml  seed_test_run.py  workflow.py
examples/age_estimation/age_estimation/: evaluator.py  seed_test_run.py  seed_test_suite.py
examples/age_estimation/tests/: test_age_estimation.py
examples/automatic_speech_recognition/: README.md  pyproject.toml
examples/automatic_speech_recognition/automatic_speech_recognition/: __init__.py  evaluator.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/automatic_speech_recognition/tests/: test_automatic_speech_recognition.py
examples/dataset/automatic_speech_recognition/: README.md  pyproject.toml
examples/dataset/automatic_speech_recognition/automatic_speech_recognition/: constants.py  upload_dataset.py  upload_results.py
examples/dataset/automatic_speech_recognition/tests/: test_automatic_speech_recognition.py
examples/dataset/classification/: README.md  pyproject.toml
examples/dataset/classification/tests/: test_binary_classification.py  test_classification.py  test_multiclass_classification.py
examples/dataset/crossing_pedestrian_detection/: README.md  pyproject.toml
examples/dataset/crossing_pedestrian_detection/crossing_pedestrian_detection/: constants.py  upload_dataset.py  upload_results.py  utils.py
examples/dataset/crossing_pedestrian_detection/tests/: test_crossing_pedestrian_detection.py
examples/dataset/image_retrieval_by_text/: README.md  pyproject.toml
examples/dataset/image_retrieval_by_text/image_retrieval_by_text/: constants.py  upload_dataset.py  upload_results.py
examples/dataset/image_retrieval_by_text/tests/: test_image_retrieval_by_text.py
examples/dataset/keypoint_detection/: README.md  pyproject.toml
examples/dataset/keypoint_detection/keypoint_detection/: benchmark_model.py  constants.py  metrics.py  model.py  upload_dataset.py  upload_results.py
examples/dataset/keypoint_detection/tests/: test_keypoint_detection.py
examples/dataset/named_entity_recognition/: README.md  pyproject.toml
examples/dataset/named_entity_recognition/named_entity_recognition/: constants.py  metrics.py  tag_map.py  upload_dataset.py  upload_results.py
examples/dataset/named_entity_recognition/tests/: test_metrics.py
examples/dataset/object_detection_2d/: README.md  pyproject.toml
examples/dataset/object_detection_2d/object_detection_2d/: commons.py  constants.py  metrics.py  upload_dataset.py  upload_results.py
examples/dataset/object_detection_2d/tests/: test_object_detection_2d.py
examples/dataset/object_detection_3d/: README.md  generate_dataset_csv.py  ingest_results.py  pyproject.toml  utils.py
examples/dataset/object_detection_3d/object_detection_3d/: constants.py  upload_dataset.py  utils.py  (+1 more)
examples/dataset/person_detection/: README.md  pyproject.toml
examples/dataset/question_answering/: README.md  pyproject.toml
examples/dataset/rain_forecast/: README.md  pyproject.toml
examples/dataset/search_embeddings/: README.md  pyproject.toml
examples/dataset/semantic_segmentation/: README.md  pyproject.toml
examples/dataset/semantic_textual_similarity/: README.md  pyproject.toml
examples/dataset/speaker_diarization/: README.md  pyproject.toml
examples/dataset/text_summarization/: README.md  pyproject.toml
examples/dataset/video_retrieval_by_text/: README.md  pyproject.toml
examples/face_recognition_11/: README.md  pyproject.toml
examples/face_recognition_11/face_recognition_11/: evaluator.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/face_recognition_11/scripts/: seed_test_run.py  seed_test_suite.py
examples/face_recognition_11/tests/: test_face_recognition_11.py
examples/object_detection_2d/: README.md  pyproject.toml
examples/object_detection_2d/object_detection_2d/: constants.py  seed_test_run.py  seed_test_suite.py
examples/object_detection_2d/tests/: test_object_detection_2d.py
examples/question_answering/: README.md  pyproject.toml
examples/question_answering/question_answering/: constants.py  evaluator.py  register_dataset.py  seed_dataset.py  seed_results.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/question_answering/tests/: test_question_answering.py
examples/rating_based_recommendation/: pyproject.toml
examples/rating_based_recommendation/rating_based_recommendation/: evaluator.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/recommender_system/: README.md  pyproject.toml
examples/recommender_system/recommender_system/: evaluator.py  metrics.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/search_embeddings/: README.md  pyproject.toml
examples/search_embeddings/search/: extract_embeddings.py
examples/semantic_segmentation/: README.md  pyproject.toml
examples/semantic_segmentation/semantic_segmentation/: activation_map_uploader.py  constants.py  data_loader.py  evaluator.py  seed_activation_map.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
examples/semantic_segmentation/tests/: test_semantic_segmentation.py
examples/text_summarization/: README.md  evaluator.py  pyproject.toml  seed_test_run.py  seed_test_suite.py  utils.py
examples/text_summarization/docker/: text-summarization.dockerfile
examples/text_summarization/tests/: test_text_summarization.py
examples/text_summarization/text_summarization/: evaluator.py  evaluator_fast.py  remote_evaluator.py  seed_test_run.py  seed_test_suite.py  utils.py  workflow.py
scripts/: pyproject.toml
(+1008 files in other folders)
