[tool.poetry]
name = "kolena"
version = "0.999.0"  # version is automatically set to latest git tag during release process
description = "Client for Kolena's machine learning testing platform."
authors = ["Kolena Engineering <eng@kolena.io>"]
homepage = "https://kolena.io"
documentation = "https://docs.kolena.io"
readme = "README.md"
license = "Apache-2.0"
keywords = ["Kolena", "ML", "testing"]
classifiers = [# classifiers for license, versions set automatically during Poetry build
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed"
]
packages = [
    { include = "kolena" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
numpy = [
    { version = ">=1.19", python = ">=3.7,<3.11" },
    { version = ">=1.23", python = ">=3.11" },
]
pandas = [
    { version = ">=1.1,<1.6", python = ">=3.7,<3.11" },
    { version = ">=1.5,<1.6", python = ">=3.11" },
]
pandera = ">=0.9.0,<0.16"
pydantic = ">=1.10,<2"
dacite = ">=1.6,<2"
requests = ">=2.20,<2.30"  # TODO: revert upper bound when urllib3 situation sorts out: https://github.com/psf/requests/issues/6432
requests-toolbelt = "*"
importlib-metadata = { version = "*", python = "<3.8" }
tqdm = ">=4,<5"
Pillow = [
    { version = "^9.1.1", python = "<3.8" },
    { version = "^10.0.1", python = ">=3.8" },
]
retrying = "^1.3.3"
Shapely = "^1.8.5"
deprecation = "^2.1.0"
termcolor = "^1.1.0"
pyarrow = ">=8"
typing-extensions = { version = "^4.5.0", python = "<3.8" }
click = ">=8"
scikit-learn = [
    { version = ">=1.0,<1.0.3", python = ">=3.7.1,<3.8", optional = true },
    { version = ">=1.2,<2", python = ">=3.8", optional = true },
]

[tool.poetry.extras]
metrics = ["scikit-learn"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
black = { version = "^22.1.0", allow-prereleases = true }
pytest = "^7"
pytest-cov = "^4.0.0"
pytest-depends = "^1.0.1"
mkdocs = { version = "^1.4.3", python = ">=3.8" }
cairosvg = { version = "^2.7.0", python = ">=3.8" }
mkdocs-material = { version = ">=9.2,<10", python = ">=3.8" }  # insiders fork installed out-of-band in docs/setup_insiders.sh
mkdocstrings = { version = ">0.20,<1", extras = ["python"], python = ">=3.8" }
mkdocs-git-committers-plugin-2 = { version = "^1", python = ">=3.8" }
mkdocs-git-revision-date-localized-plugin = { version = "^1", python = ">=3.8" }

[tool.poetry.scripts]
kolena = 'kolena._utils.cli:run'

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# do not scan 'kolena' for tests, as there are many functions/classes that look like tests
norecursedirs = "kolena"
# explicitly disable test classes such that e.g. TestRun is not interpreted as a test
python_classes = []
# only collect functions starting with 'test__'
python_functions = ["test__*"]
markers = [
    "metrics: tests that require the metrics extra dependency such as sklearn",
]
