[tool.poetry]
name = "kolena"
version = "0.999.0"  # version is automatically set to latest git tag during release process
description = "Client for Kolena's machine learning testing platform."
authors = ["Kolena Engineering <eng@kolena.com>"]
homepage = "https://kolena.com"
documentation = "https://docs.kolena.com"
readme = "README.md"
license = "Apache-2.0"
keywords = ["Kolena", "ML", "testing"]
classifiers = [# classifiers for license, versions set automatically during Poetry build
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed"
]
packages = [
    { include = "kolena" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = [
    { version = ">=1.19,<2", python = ">=3.8,<3.11" },
    { version = ">=1.23,<2", python = ">=3.11,<3.12" },
    { version = ">=1.26,<2", python = ">=3.12" },
]
pandas = [
    { version = ">=1.1,<3", python = ">=3.8,<3.11" },
    { version = ">=1.5,<3", python = ">=3.11,<3.12" },
    { version = ">=2.1.1,<3", python = ">=3.12" },
]
pandera = ">=0.9,<1"
pydantic = ">=2,<3"
dacite = ">=1.6,<2"
requests = ">=2.20,<3"
requests-toolbelt = "*"
tqdm = ">=4,<5"
Pillow = ">=10.0.1,<11"
retrying = ">=1.3.3,<2"
Shapely = ">=1.8.5,<3"
termcolor = ">=1.1,<3"
pyarrow = ">=8"
click = ">=8"
scikit-learn = { version = ">=1.2,<2", optional = true }
scipy = [  # transient dependency of scikit-learn, pin required to unbreak installs on specific Python versions
    { version = ">=1,<1.11", python = ">=3.8,<3.10", optional = true },
    { version = ">=1.12,<2", python = ">=3.12", optional = true }
]
lzstring = "^1.0.4"

[tool.poetry.extras]
metrics = ["scikit-learn", "scipy"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
black = { version = "^22.1.0", allow-prereleases = true }
pytest = "^7"
pytest-cov = "^4.0.0"
pytest-depends = "^1.0.1"
mkdocs = "^1.4.3"
cairosvg = "^2.7.0"
mkdocs-material = ">=9.2,<10"  # insiders fork installed out-of-band in docs/setup_insiders.sh
mkdocstrings = { version = ">0.20,<1", extras = ["python"] }
mkdocs-git-committers-plugin-2 = "^1"
mkdocs-git-revision-date-localized-plugin = "^1"

[tool.poetry.scripts]
kolena = 'kolena._utils.cli:run'

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# do not scan 'kolena' for tests, as there are many functions/classes that look like tests
norecursedirs = "kolena"
# explicitly disable test classes such that e.g. TestRun is not interpreted as a test
python_classes = []
# only collect functions starting with 'test__'
python_functions = ["test__*"]
markers = [
    "metrics: tests that require the metrics extra dependency such as sklearn",
]
