[tool.poetry]
name = "activation_map"
version = "0.1.0"
description = "Example Kolena integration on a dummy workflow to demo activation map uploading"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
#kolena = ">=0.76.0,<1"
kolena = {path = "../../", develop = true}
s3fs = "^2023.6.0"
fsspec = "^2023.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
