[tool.poetry]
name = "age_estimation"
version = "0.1.0"
description = "Example Kolena integration for age estimation"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.extras]
search = ["kolena-studio-client-api"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = ">=0.76.0,<1"
s3fs = "^2023.5.0"
pandera = ">=0.9.0,<0.16"
kolena-studio-client-api = {path = "local_packages/kolena_studio_client_api.tar.gz", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
