[tool.poetry]
name = "automatic-speech-recognition"
version = "0.1.0"
description = "Example Kolena integration for automatic speech recognition"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = ">=0.92.0,<1"
s3fs = "^2023.5.0"
jiwer = "^3.0.3"
langid = "^1.1.6"
langcodes = "^3.3.0"
numwords-to-nums = "^1.2.0"
language-data = "^1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
