[tool.poetry]
name = "face_recognition_11"
version = "0.1.0"
description = "Example Kolena integration for face recognition 1:1"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = ">=0.81.0,<1"
s3fs = "^2023.5.0"
pandera = ">=0.9.0,<0.16"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
