[tool.poetry]
name = "question_answering"
version = "0.1.0"
description = "Example Kolena integration for question answering"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kolena = ">=0.82.0,<1"
s3fs = "^2022.7.1"
torch = [
  {version = "2.0.1", markers = "sys_platform == 'darwin'"},
  {version = "2.0.1", markers = "sys_platform != 'darwin'", source = "torch+cpu"}
]
evaluate = "^0.4.0"
bert-score = "^0.3.13"
rouge-score = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[[tool.poetry.source]]
name = "torch+cpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
