[tool.poetry]
name = "question_answering"
version = "0.1.0"
description = "Example Kolena integration for question answering"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kolena = ">=0.82.0,<1"
s3fs = "^2022.7.1"
torch = [
  {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-2.0.1-cp39-none-macosx_11_0_arm64.whl"},
  {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-2.0.1-cp39-none-macosx_10_9_x86_64.whl"},
  {markers = "sys_platform != 'darwin'", version = "2.0.1", source = "torch+cpu"}
]
evaluate = "^0.4.0"
bert-score = "^0.3.13"
rouge-score = "^0.1.2"
#meteor = "^0.4.0"
#bleurt = "^0.4.0"
#bart_score = { git = "https://github.com/neulab/BARTScore.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[[tool.poetry.source]]
name = "torch+cpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
