[tool.poetry]
name = "rating_based_recommendation"
version = "0.1.0"
description = "Tabular Demo Workflow for Rating-Based Recommendation"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = ">=0.81.0,<1"
s3fs = "^2023.5.0"
pandera = ">=0.9.0,<0.16"
scikit-learn = [
    { version = ">=1.0,<1.0.3", python = ">=3.7.1,<3.8" },
    { version = ">=1.2,<2", python = ">=3.8" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
