[tool.poetry]
name = "search_embeddings"
version = "0.1.0"
description = "Example Kolena embeddings extraction logic"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = ">=0.94.0,<1"
s3fs = "^2023.5.0"
kolena-embeddings = {path = "local_packages/kolena_embeddings.tar.gz"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
