[tool.poetry]
name = "semantic_segmentation"
version = "0.1.0"
description = "Example Kolena integration for semantic segmentation"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
opencv-python-headless = ">=4.6.0.66,<4.7"
kolena = ">=0.94.0,<1"
s3fs = "^2023.5.0"
fsspec = "^2023.5.0"
pandera = ">=0.9.0,<0.16"
boto3 = "^1.25"
scikit-learn = "^1.1.2"
scikit-image = "^0.19.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
