[tool.poetry]
name = "text_summarization"
version = "0.1.0"
description = "Example Kolena integration for text summarization"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kolena = { path = "../..", develop = true }
s3fs = "^2022.7.1"
scikit-learn = "^1.1.2"
numba = "^0.56.0"
opencv-python-headless = "^4.6.0"
evaluate = "^0.4.0"
bert-score = "^0.3.13"
absl-py = "^1.4.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
sacrebleu = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
