[tool.poetry]
name = "text_summarization"
version = "0.1.0"
description = "Example Kolena integration for text summarization"
authors = ["Kolena Engineering <eng@kolena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kolena = { path = "../..", develop = true }  # TODO: use PyPI-installed official package version
s3fs = "^2022.7.1"
scikit-learn = "^1.1.2"
numba = "^0.56.0"
opencv-python-headless = "^4.6.0"
# Transient dependency of `bert-score` -- pin to CPU-only to unbreak CI. This can be safely removed on GPU systems
# Further reading: https://github.com/python-poetry/poetry/issues/6409#issuecomment-1310655479
torch = { version = "^2.0.1+cpu", source = "torch+cpu" }
evaluate = "^0.4.0"
bert-score = "^0.3.13"
absl-py = "^1.4.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
sacrebleu = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[[tool.poetry.source]]
name = "torch+cpu"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
