[project]
name = "automatic-speech-recognition"
version = "0.1.0"
description = "Example Kolena integration for automatic speech recognition"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.8,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "jiwer>=3.0.3,<4",
    "langid>=1.1.6,<2",
    "langcodes>=3.3.0,<4",
    "numwords-to-nums>=1.2.0,<2",
    "language-data>=1.1,<2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
