[tool.poetry]
name = "crossing-pedestrian-detection"
version = "0.1.0"
description = ""
authors = ["Nitesh Sandal <nitesh@kolena.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = "^1.9.0"
s3fs = "^2023.5.0"
smart-open = {extras = ["s3"], version = "^7.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
