[tool.poetry]
name = "crossing_pedestrian_detection"
version = "0.1.0"
description = "Example Kolena integration for Crossing Pedestrian Detection"
authors = ["Kolena Engineering <eng@kolena.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = {extras = ["metrics"], version = "^1.23.0"}
s3fs = "^2024.9.0"
smart-open = {extras = ["s3"], version = "^7.0.1"}
numpy = "^1.19"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
