[project]
name = "crossing_pedestrian_detection"
version = "0.1.0"
description = "Example Kolena integration for Crossing Pedestrian Detection"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
readme = "README.md"
requires-python = ">=3.8,<3.12"

dependencies = [
    "kolena[metrics]>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "smart-open[s3]>=7.0.1,<8",
    "numpy>=1.19,<2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
