[tool.poetry]
name = "image_retrieval_by_text"
version = "0.1.0"
description = "Example Kolena integration for Image Retrieval by Text"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kolena = {extras = ["metrics"], version = "^1.23.0"}
s3fs = "^2023.5.0"
numpy = "^1.26.4"
pillow = "^10.2.0"
pre-commit = "^3.6.2"
torch = "^2.2.1"
transformers = "^4.38.1"
boto3 = ">=1.34.41,<1.34.52"
sentencepiece = "^0.2.0"
protobuf = "^4.25.3"
scipy = [  # transient dependency of scikit-learn, pin required to unbreak installs on specific Python versions
    { version = ">=1,<1.11", python = ">=3.8,<3.9", optional = true },
    { version = ">=1,<1.14", python = ">=3.9,<3.10", optional = true },
    { version = ">=1.12,<2", python = ">=3.12", optional = true }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
