[project]
name = "image_retrieval_by_text"
version = "0.1.0"
description = "Example Kolena integration for Image Retrieval by Text"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9,<3.12"

dependencies = [
    "kolena[metrics]>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "numpy>=1.26.4,<2",
    "pillow>=10.2.0,<11",
    "torch>=2.2.1,<3",
    "transformers>=4.38.1,<5",
    "boto3>=1.34.41,<1.34.52",
    "sentencepiece>=0.2.0,<1",
    "protobuf>=4.25.3,<5",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
