[tool.poetry]
name = "named-entity-recognition"
version = "0.1.0"
description = "Example Kolena integration for a named entity recognition problem"
authors = ["Kolena Engineering <eng@kolena.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kolena = "^1.29.0"
pandas = "^2.2.2"
transformers = "^4.43.3"
torch = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
