[project]
name = "named-entity-recognition"
version = "0.1.0"
description = "Example Kolena integration for a named entity recognition problem"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
requires-python = ">=3.9,<3.12"

dependencies = [
    "kolena>=1.29.0,<2",
    "pandas>=2.2.2,<3",
    "transformers>=4.43.3,<5",
    "torch>=2.4.0,<3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
