[project]
name = "object_detection_2d"
version = "0.1.0"
description = "Example Kolena integration for Object Detection 2D"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9,<3.12"

dependencies = [
    "kolena[metrics]>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "fsspec>=2023.5.0,<2024",
    "numpy>=1.19,<2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
