[tool.poetry]
name = "kitti-ingest-example-3d"
version = "0.1.0"
description = "Example Kolena integration for KITTI 3D object detection"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kolena = "^1.0.0"
pydantic = ">=2.0.0,<3.0"
openmim = "^0.3.9"
mmdet = ">=3.0.0,<3.1.0"
mmdet3d = ">=1.1.0,<1.2.0"
torch = "^2.2.0"
mmcv-lite = ">=2.0.0rc4,<2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
