[tool.poetry]
name = "object_detection_3d"
version = "0.1.0"
description = "Example Kolena integration for KITTI 3D object detection"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kolena = "^1.23.0"
pydantic = ">=2,<3"
openmim = "^0.3.9"
mmcv-lite = ">=2.0.0rc4"
mmdet = ">=3.0.0"
mmdet3d = ">=1.1.0"
s3fs = "^2024.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
