[tool.poetry]
name = "person-detection"
version = "0.1.0"
description = "Example Kolena integration for COCO Person Detection"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kolena = {extras = ["metrics"], version = "^1.9.0"}
s3fs = "^2023.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
