[tool.poetry]
name = "question_answering"
version = "0.1.0"
description = "Example Kolena integration for question answering"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kolena = "^1.23.0"
s3fs = "^2022.7.1"
torch = [
  {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_11_0_arm64.whl"},
  {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_10_9_x86_64.whl"},
  {markers = "sys_platform != 'darwin'", version = "2.1.2", source = "torch+cpu"}
]
sentence-transformers = "^2.2.2"
openai = "^1.6.0"
protobuf = "^4.25.1"
numpy = "^1.19"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[[tool.poetry.source]]
name = "torch+cpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
