[project]
name = "question_answering"
version = "0.1.0"
description = "Example Kolena integration for question answering"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0,<2024",
    "sentence-transformers>=2.2.2,<3",
    "openai>=1.6.0,<2",
    "protobuf>=4.25.1,<5",
    "numpy>=1.19,<2",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_11_0_arm64.whl; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.1.2-cp39-none-macosx_10_9_x86_64.whl; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch == 2.1.2 @ https://download.pytorch.org/whl/cpu/; sys_platform != 'darwin'",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # to allow the syntax 'pkg @ url' in dependencies
