[project]
name = "question_answering"
version = "0.1.0"
description = "Example Kolena integration for question answering"
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9,<3.12"

dependencies = [
    "kolena>=1.23.0,<2",
    "s3fs>=2023.5.0",
    "sentence-transformers>=2.2.2,<3",
    "openai>=1.6.0,<2",
    "protobuf>=4.25.1,<5",
    "numpy>=1.19,<2",
    "torch==2.1.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=2.17,<3",
    "pytest>=7,<8",
    "pytest-depends>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
