[tool.poetry]
name = "rain_forecast"
version = "0.1.0"
description = "Kolena Datasets Example integration for rain forecast"
authors = ["Kolena Engineering <eng@kolena.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kolena = "^1.23.0"
s3fs = "^2024.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
pytest = "^7"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
